Resolves: tdf#122804 make bitmap page 'add' dialog title localized

Change-Id: I0c4f6775b8bc9fae8dc81f07fec2e21218e36037